Add new main menu bg and buttons

--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript'>
-	var Engine = {
+	<script type='text/javascript'>var Engine = {
 	RuntimeEnvironment: function(Module, exposedLibs) {
 		// The above is concatenated with generated code, and acts as the start of
 		// a wrapper for said code. See engine.js for the other part of the
@@ -553,8 +552,7 @@ var Module=typeof Module!=="undefined"?Module:{};var IDHandler=function(){var id
 				break;
 		}
 	}
-})();
-	</script>
+})();</script>
 	<script type='text/javascript'>//<![CDATA[
 
 		var engine = new Engine;
